[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Datapacks/UI/InGameMenu/DatapackInGameEntry.gd" type="Script" id=1]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=2]

[node name="DatapackInGameEntry" type="HBoxContainer"]
margin_right = 1280.0
margin_bottom = 20.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="NameLabel" type="Label" parent="."]
margin_right = 458.0
margin_bottom = 25.4
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Test datapack"
autowrap = true

[node name="ContainsLabel" type="Label" parent="."]
margin_left = 461.0
margin_right = 919.0
margin_bottom = 25.4
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Contains a beatiful catwife"
autowrap = true

[node name="LoadButton" type="Button" parent="."]
margin_left = 922.0
margin_right = 967.0
margin_bottom = 25.0
text = "LOAD"

[node name="UnloadButton" type="Button" parent="."]
margin_left = 970.0
margin_right = 1163.0
margin_bottom = 25.0
custom_colors/font_color_focus = Color( 1, 0.756863, 0.756863, 1 )
custom_colors/font_color = Color( 1, 0.576471, 0.576471, 1 )
custom_colors/font_color_hover = Color( 1, 0.666667, 0.666667, 1 )
custom_colors/font_color_pressed = Color( 1, 0.34902, 0.34902, 1 )
text = "UNLOAD (Erases progress)"

[node name="NothingToLoadButton" type="Button" parent="."]
margin_left = 1166.0
margin_right = 1280.0
margin_bottom = 25.0
disabled = true
text = "Nothing to load"

[connection signal="pressed" from="LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="UnloadButton" to="." method="_on_UnloadButton_pressed"]
